# bts2its_develop

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  sample_settings.yaml
scripts/: docker_build.ps1  docker_pull.ps1  docker_push.ps1  exec.ps1  exec_dev.ps1
src/bts2its/: __main__.py  config.py
src/bts2its/adaptors/: __init__.py  base_converter_adaptor.py  default_converter_adaptor.py
src/bts2its/common/: __init__.py  types.py
src/bts2its/factories/: factory.py
src/bts2its/interfaces/: __init__.py  abstract_bts2its.py  abstract_converter.py
src/bts2its/mantis2redmine/: __init__.py  base_mantis2redmine.py  default_mantis2redmine.py
src/bts2its/redmine_accessor/: __init__.py  default_redmine_accessor.py
